--- a/_data/links.yml
+++ b/_data/links.yml
@@ -2,8 +2,8 @@
   url: /
   links:
   - title: Policy and Standards
-    url: /policies.html
+    url: /policies
 - title: Security Control Catalog
-  url: /catalog.html
+  url: /catalog
 - title: Contact
-  url: /contact.html
+  url: /contact
