Undo changes from earlier

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -2,8 +2,8 @@
   url: /
   links:
   - title: Policy and Standards
-    url: /policies
+    url: /policies.html
 - title: Security Control Catalog
-  url: /catalog
+  url: /catalog.html
 - title: Contact
-  url: /contact
+  url: /contact.html
