--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -1,6 +1,6 @@
 audiences:
 - url: /catalog-cui.html
-  title: CUI Programs Required Controls
+  title: CUI Programs 
 #- url: /catalog-itpro.html
 #  title: IT Professionals
 #- url: /catalog-researcher.html
