Rename catalog to Controls Catalog

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -3,7 +3,7 @@
   links:
   - title: Policy and Standards
     url: /policies.html
-- title: Security Control Catalog
+- title: Security Controls Catalog
   url: /catalog.html
 - title: Contact
   url: /contact.html
