--- a/_data/links.yml
+++ b/_data/links.yml
@@ -3,6 +3,8 @@
   links:
   - title: Policy and Standards
     url: /policies.html
+- title: Information Security Manual
+  url: /manual.html
 - title: Security Controls Catalog
   url: /catalog.html
 - title: Contact
